--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -9,3 +9,25 @@ entrypoint = "./functions/anomaly-detection-realtime/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/anomaly-detection-realtime/*.html" ]
+
+[functions.telegram-bot]
+enabled = true
+verify_jwt = true
+import_map = "./functions/telegram-bot/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/telegram-bot/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/telegram-bot/*.html" ]
+
+[functions.telegram-notification]
+enabled = true
+verify_jwt = true
+import_map = "./functions/telegram-notification/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/telegram-notification/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/telegram-notification/*.html" ]
